--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -2,20 +2,20 @@
 owner: upptime # Your GitHub organization or username, where this repository lives
 repo: upptime # The name of this repository
 
-sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
-  - name: IPv6 test
-    url: forwardemail.net
-    port: 80
-    check: "tcp-ping"
-    ipv6: true
+#sites:
+#  - name: Google
+#    url: https://www.google.com
+#  - name: Wikipedia
+#    url: https://en.wikipedia.org
+#  - name: Hacker News
+#    url: https://news.ycombinator.com
+#  - name: Test Broken Site
+#    url: https://thissitedoesnotexist.koj.co
+#  - name: IPv6 test
+#    url: forwardemail.net
+#    port: 80
+#    check: "tcp-ping"
+#    ipv6: true
 
 # GitHub Pagesで公開するステータスサイトの名前
 status-website:
