--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -71,7 +71,7 @@ sites:
     url: https://tatatan.base.ec/
 
   - name: 通知テスト
-    url: https://aaa.jp/
+    url: https://aaaiii.jp/
 
 # 監視の間隔（重要）
 # 毎日 UTC 21:00 (= 日本時間 翌06:00) に実行
