--- a/.github/workflows/notify-if-still-down.yml
+++ b/.github/workflows/notify-if-still-down.yml
@@ -9,22 +9,22 @@ on:
 jobs:
   notify-down:
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }} # CI自体は成功(完了)している場合
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        with:
+          ref: master # 重要: Upptimeが更新しているブランチを指定
 
       - name: Check for Down status and Notify
         env:
-          # ここには「https://...」から始まるWebhook URLが入っているSecretを指定してください
-          # 最初のステップで作った名前が LARK_WEBHOOK_URL であればそのままでOK
           WEBHOOK_URL: ${{ secrets.LARK_WEBHOOK_URL }}
         run: |
-          # README.md の中に " is :red_circle: down" のような表記があるか探す
-          # Upptimeのバージョンにより表記が異なるため、単純に "Down" という単語で検知
+          # デバッグ用にファイル一覧を表示してみる（エラー原因の切り分け用）
+          ls -la
+
           if grep -q "Down" README.md; then
             echo "🚨 Down sites detected. Sending notification..."
-            
             curl -X POST -H "Content-Type: application/json" \
             -d '{
               "msg_type": "text",
